--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -147,6 +147,19 @@ h2 {
 .link:hover {
     color: #74a49c;
 }
+.aboutustittle {
+    color: #335343;
+}
+.aboutus {
+    padding-left: 200px;
+    padding-right: 200px;
+}
+.aboutus h3 {
+    margin-bottom: 15px;
+}
+.aboutus .contact {
+    padding-bottom: 50px;
+}
 /* RESPONSIVE CSS
   -------------------------------------------------- */
 
@@ -199,5 +212,9 @@ h2 {
     .headertesti {
         font-weight: 400;
         font-size: 40px;
+    }
+    .aboutus {
+        padding-right: 20px;
+        padding-left: 20px;
     }
 }
