--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -5,6 +5,7 @@
   display: block;
   margin-top: 0; 
 } */
+@import url("https://fonts.googleapis.com/css2?family=Revalia&display=swap");
 .bd-placeholder-img {
     font-size: 1.125rem;
     text-anchor: middle;
@@ -136,6 +137,11 @@ h2 {
     width: 100%;
     height: 300px;
 }
+#Menu {
+    width: 100%;
+    height: 300px;
+    padding-top: 30px;
+}
 .headertesti {
     font-weight: 400;
 }
@@ -159,6 +165,36 @@ h2 {
 }
 .aboutus .contact {
     padding-bottom: 50px;
+}
+.pricelist .row {
+    padding-bottom: 25px;
+    padding-top: 25px;
+}
+.pricelist .row .judul {
+    padding: 0;
+    padding-bottom: 18px;
+    padding-top: 18px;
+    background-color: #f1bbbc;
+    text-align: left;
+}
+.pricelist .row .container h2 {
+    font-family: "Revalia", cursive;
+    color: white;
+    margin-left: 6%;
+}
+.pricelistcontent {
+    padding-left: 250px;
+    padding-right: 250px;
+}
+
+.pricelistcontent .carousel-inner .carousel-item img {
+    height: 900px;
+}
+.owl-carousel {
+    padding-top: 30px;
+}
+.owl-nav button {
+    width: 20px;
 }
 /* RESPONSIVE CSS
   -------------------------------------------------- */
@@ -216,5 +252,25 @@ h2 {
     .aboutus {
         padding-right: 20px;
         padding-left: 20px;
+    }
+    .pricelist .row {
+        padding-bottom: 15px;
+        padding-top: 15px;
+    }
+    .pricelist .row .judul {
+        padding: 0;
+        padding-bottom: 10px;
+        padding-top: 10px;
+        text-align: left;
+    }
+    .pricelist .row .container h2 {
+        font-size: 20px;
+    }
+    .pricelistcontent {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .pricelistcontent .carousel-inner .carousel-item img {
+        height: 450px;
     }
 }
