--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -19,7 +19,15 @@
         font-size: 3.5rem;
     }
 }
-
+html {
+    height: 100%;
+    box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
 .btn-secondary:visited {
     background-color: #f1bbbc;
     border-color: #f1bbbc;
@@ -35,8 +43,20 @@
 
 body {
     color: #5a5a5a;
+    position: relative;
+    margin: 0;
+    padding-bottom: 6rem;
+    min-height: 100%;
+    font-family: "Helvetica Neue", Arial, sans-serif;
 }
-
+footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #efefef;
+    text-align: center;
+}
 .nav-link {
     text-decoration: none;
     color: #335343;
@@ -155,6 +175,9 @@ h2 {
 /* END ABOUT US PAGE  */
 
 /* PRICELIST PAGE */
+#pricelist h1 {
+    padding-top: 20px;
+}
 .pricelist .row {
     padding-bottom: 25px;
     padding-top: 25px;
@@ -171,13 +194,13 @@ h2 {
     color: white;
     margin-left: 6%;
 }
-.pricelistcontent {
+/* .pricelistcontent {
     padding-left: 250px;
     padding-right: 250px;
-}
+} */
 
 .pricelistcontent .carousel-inner .carousel-item img {
-    height: 900px;
+    height: 800px;
 }
 .owl-carousel {
     padding-top: 30px;
@@ -220,7 +243,7 @@ h2 {
 .faq .faq-sec .answer {
     margin-top: 5px;
     border-width: 8px !important;
-    border-color: grey !important;
+    border-color: lightgray !important;
     width: 100%;
     height: 75px;
     text-align: left;
@@ -236,7 +259,7 @@ h2 {
     padding: 0;
     font-size: 50px;
     margin-left: 10px;
-    color: grey;
+    color: lightgray;
 }
 .faq .faq-sec .answer .answcontent {
     width: 92%;
@@ -266,7 +289,23 @@ h2 {
         margin-top: 7rem;
     }
 }
-
+@media (max-width: 110em) {
+    .pricelistcontent .carousel-inner .carousel-item img {
+        height: auto;
+    }
+}
+@media (max-width: 90em) {
+    .pricelistcontent .carousel-control-next-icon,
+    .pricelistcontent .carousel-control-prev-icon {
+        filter: invert(0);
+    }
+}
+@media (max-width: 62em) {
+    .pricelistcontent .carousel-inner .carousel-item img {
+        width: 75%;
+        height: auto;
+    }
+}
 @media (max-width: 40em) {
     .carousel-caption {
         margin-bottom: -40px;
@@ -321,7 +360,8 @@ h2 {
         padding-right: 20px;
     }
     .pricelistcontent .carousel-inner .carousel-item img {
-        height: 450px;
+        height: 400px;
+        width: 250px;
     }
 
     .faq .faq-sec .question,
@@ -346,7 +386,6 @@ h2 {
     .faq .faq-sec .answer .answlogo h1 {
         font-size: 25px;
         margin-left: 10px;
-        color: grey;
     }
     .faq .faq-sec .answer .answcontent {
         width: 85%;
