--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -221,7 +221,7 @@ h2 {
 }
 /* END ABOUT US PAGE  */
 
-/* PRICELIST PAGE */
+/* MENU PAGE */
 #pricelist h1 {
     padding-top: 20px;
     font-family: "Pacifico", cursive;
@@ -279,6 +279,14 @@ h2 {
 }
 .owl-item .card {
     width: 90%;
+}
+/* END MENU PAGE */
+
+/* PRICELIST PAGE */
+.container .row .col img {
+    max-width: 300px;
+    border: 1px solid #0c6146;
+    border-radius: 1%;
 }
 /* END PRICELIST PAGE */
 
