--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -86,13 +86,14 @@ footer {
 
 /* CUSTOMIZE THE CAROUSEL
   -------------------------------------------------- */
+
 .carousel-caption {
     bottom: 3rem;
     z-index: 10;
 }
 
 #headcarousel {
-    height: 32rem;
+    height: 38rem;
 }
 
 #headcarousel > img {
@@ -100,7 +101,7 @@ footer {
     top: 0;
     left: 0;
     min-width: 100%;
-    height: 32rem;
+    height: 38rem;
 }
 
 /* HOME PAGE*/
@@ -144,6 +145,9 @@ footer {
 }
 .homearticle .hiddentext {
     max-height: 240px;
+}
+.showarticlecontent {
+    text-align: justify;
 }
 .row p {
     text-align: justify;
@@ -243,7 +247,7 @@ h2 {
     background-color: #f1bbbc;
     text-align: left;
 }
-.pricelist .row .container h2 {
+.pricelist .row .container-fluid h2 {
     font-family: "Revalia", cursive;
     color: white;
     font-size: 25px;
@@ -258,8 +262,8 @@ h2 {
     font-weight: bold;
 }
 .owl-nav {
-    margin-top: -10%;
-    padding-bottom: 10%;
+    margin-top: -7%;
+    padding-bottom: 7%;
 }
 .owl-stage-outer {
     width: 90%;
@@ -291,6 +295,9 @@ h2 {
 /* END PRICELIST PAGE */
 
 /* FAQ PAGE */
+.col-icon{
+    margin: auto;
+}
 .pagination-faq nav {
     background-color: transparent;
 }
@@ -402,6 +409,10 @@ h2 {
     .pricelistcontent .carousel-inner .carousel-item img {
         height: auto;
     }
+    .owl-nav {
+        margin-top: -10%;
+        padding-bottom: 10%;
+    }
 }
 @media (max-width: 90em) {
     .pricelistcontent .carousel-control-next-icon,
@@ -420,8 +431,8 @@ h2 {
         padding-left: 30px;
     }
     .owl-nav {
-        margin-top: -25%;
-        padding-bottom: 25%;
+        margin-top: -30%;
+        padding-bottom: 30%;
     }
     .carousel-control-prev {
         padding-right: 30px;
@@ -522,8 +533,8 @@ h2 {
         width: 280px;
     }
     .owl-nav {
-        margin-top: -40%;
-        padding-bottom: 40%;
+        margin-top: -50%;
+        padding-bottom: 50%;
     }
 }
 @media (max-width: 22em) {
